_lizzy_misc.scss: - bugfix: .lzy-overlay-background -> needs z-index

--- a/css/scss/_lizzy_misc.scss
+++ b/css/scss/_lizzy_misc.scss
@@ -88,6 +88,7 @@
     background: rgba(50,50,50,0.8);
     width: 100vw;
     height: 100vh;
+    x-index: 9999;
   .lzy-timeout-img {
     max-width: 40vw;
   }
